Math Operators Fixed

--- a/Basic JavaScript Projects/Project3_math-operators/index.html
+++ b/Basic JavaScript Projects/Project3_math-operators/index.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <title>Math Operators</title>
-        <script src="JS/main.js>"></script>
+        <script src="JS/main.js"></script>
     </head>
 
     <body>
