Math Operators Complete

--- a/Basic JavaScript Projects/Project3_math-operators/index.html
+++ b/Basic JavaScript Projects/Project3_math-operators/index.html
@@ -9,5 +9,21 @@
         <button onclick='aFunction()' id='buttonText'>
         <p id='math'>This is for math.</p>
         </button>
+
+        <button onclick='subtract()' id='math'>
+            <p id='math'>This is for math.</p>
+            </button>
+
+        <button onclick='multiply()' id='theMath'>
+            <p id='theMath'>This is for math.</p>
+            </button>
+
+        <button onclick='divide()' id='divMath'>
+            <p id='divMath'>This is for math.</p>
+            </button>
+
+        <button onclick='addition()' id='addMath'>
+            <p id='addMath'>This is for math.</p>
+            </button>
     </body>
 </html>
