Math Operators complete

--- a/Basic JavaScript Projects/Project3_math-operators/index.html
+++ b/Basic JavaScript Projects/Project3_math-operators/index.html
@@ -25,5 +25,13 @@
         <button onclick='addition()' id='addMath'>
             <p id='addMath'>This is for math.</p>
             </button>
+
+        <button onclick='plusOne()' id='oneMath'>
+            <p id='oneMath'>This is for math.</p>
+            </button>
+
+        <button onclick='lessOne()' id='lessMath'>
+            <p id='lessMath'>This is for math.</p>
+            </button>
     </body>
 </html>
