All Operators Complete

--- a/Basic JavaScript Projects/Project3_math-operators/index.html
+++ b/Basic JavaScript Projects/Project3_math-operators/index.html
@@ -33,5 +33,9 @@
         <button onclick='lessOne()' id='lessMath'>
             <p id='lessMath'>This is for math.</p>
             </button>
+
+        <button onclick='randomNumber()' id='isMath'>
+            <p id='isMath'>This is for Math</p>
+        </button>
     </body>
 </html>
