--- a/Basic JavaScript Projects/Project9_countdown_slideshow/Slideshow Challenge/index.html
+++ b/Basic JavaScript Projects/Project9_countdown_slideshow/Slideshow Challenge/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <meta name="viewport" content="width=device-width, initial-scale=1">
         <title>Slideshow Challenge</title>
         <link rel="stylesheet" type="text/css" href="CSS/main.css">
     </head>
@@ -12,19 +13,16 @@
             <div class="mySlides fade">
                 <div class="numbertext">1 / 3</div>
                 <img src="images/gloomybear.jpeg" style="width:100%" alt="Gloomy Bear">
-                <div class="text">Caption Text</div>
             </div>
 
             <div class="mySlides fade">
                 <div class="numbertext">2 / 3</div>
                 <img src="images/boyandgloomybear.jpeg" style="width:100%" alt="Gloomy Bear and Boy">
-                <div class="text">Caption Two</div>
             </div>
 
             <div class="mySlides fade">
                 <div class="numbertext">3 / 3</div>
                 <img src="images/gloomybearfight.jpeg" style="width:100%" alt="Gloomy Bear and Boy Fight">
-                <div class="text">Caption Three</div>
             </div>
 
             <!--Next and Previous buttons-->
@@ -39,5 +37,7 @@
             <span class="dot" onclick="currentSlide(2)"></span>
             <span class="dot" onclick="currentSlide(3)"></span>
         </div>
+
+        <script src="JS/main.js"></script>
     </body>
 </html>
